@@ -272,4 +272,18 @@ static int64 I64_of_double(double f)
   return res;
 }
 
+static int64 I64_bswap(int64 x)
+{
+  int64 res;
+  res.h = (((x.l & 0x000000FF) << 24) |
+           ((x.l & 0x0000FF00) << 8) |
+           ((x.l & 0x00FF0000) >> 8) |
+           ((x.l & 0xFF000000) >> 24));
+  res.l = (((x.h & 0x000000FF) << 24) |
+           ((x.h & 0x0000FF00) << 8) |
+           ((x.h & 0x00FF0000) >> 8) |
+           ((x.h & 0xFF000000) >> 24));
+  return res;
+}
+
 #endif /* CAML_INT64_EMUL_H */
